# Online_Electronics_Marketplace

./: README.md  env.simple  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/fixtures/: network_data.json
network/migrations/: 0001_initial.py  0002_alter_networknode_user.py  0002_remove_networknode_products_product_network_node.py  0003_networknode_user.py  0003_remove_networknode_products_networknode_products.py  0004_alter_networknode_user.py  0004_remove_networknode_products_product_network_nodes.py  0005_alter_networknode_options_alter_networknode_city_and_more.py  0005_remove_product_network_nodes_product_network_node.py  0006_alter_networknode_city_alter_networknode_country_and_more.py  0007_alter_networknode_options.py  0008_alter_product_network_node.py  0009_address_remove_networknode_city_and_more.py
users/: admin.py  models.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py
